--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,7 @@ a {
   box-sizing: border-box;
 }
 
+
 .destinationButton {
   position: relative;
   width: 224px;
@@ -104,7 +105,7 @@ a {
   width: 30%;
   margin: 0 auto;    
   margin-top: 40px;
-  margin-bottom: 20px;
+  margin-bottom: -40px;
 }
 
 /* --------------- HOME ----------------- */
@@ -143,7 +144,14 @@ a {
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.5em;
+  padding-left: .5em;
+  padding-right: .5em;
+  color: rgb(83, 61, 230);
 }
 
 .aX {
@@ -818,7 +826,11 @@ h3 {
   position: absolute;
   left: 0;
   top: 337px;
-  background: hotpink;
   /* direction: rtl; */
 
+}
+
+.subheading {
+  color: #FFFFFF;
+  margin-bottom: 40px;
 }
